优化执行效率，还未经过测试，先不要使用这个版本